# oxide-pulse

./: .gitignore  Cargo.toml  LICENSE  README.md
debug-test/: Cargo.toml
debug-test-c3/: Cargo.toml
ghost-trigger/: Cargo.toml  GDB_COMMANDS.md  JTAG_SETUP.md  QUICK_START.md  README.md  TESTING_GUIDE.md  install_gdb.sh  sdkconfig.defaults
ghost-trigger/src/: main.rs
src/: main.rs
